# ansible-collection-consul

./: .gitignore  .yamllint  Makefile  README.md  devbox.json  galaxy.yml  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: libvirt.yml  lint.yml  molecule.yml  release.yml
meta/: runtime.yml
molecule/binary/: molecule.yml
molecule/common/: converge.yml  update.yml  verify.yml
molecule/repo/: molecule.yml
molecule/roles/: molecule.yml
molecule/update/: molecule.yml
playbooks/: deploy.yml  install.yml  prepare.yml  update.yml
playbooks/vars/: main.yml
roles/update/: README.md
roles/update/defaults/: main.yml
roles/update/meta/: main.yml
roles/update/tasks/: main.yml
