[project]
name = "nephelaiio-consul"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ansible-lint>=25.4.0",
  "ansible>=11.7.0",
  "molecule-plugins[docker]>=23.7.0",
  "molecule>=25.4.0",
  "yamllint>=1.37.1",
  "netaddr>=1.3.0",
  "libvirt-python>=11.5.0",
  "lxml>=6.0.0",
  "passlib>=1.7.4"
]
